--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "img2ascii",
   "version": "1.1.0",
-  "description": "Convert images url to ascii art",
+  "description": "Convert images (local or url) to ascii art",
   "main": "img2ascii.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
