--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "img2ascii",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Convert images (local or url) to ascii art",
   "main": "img2ascii.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "bin": "./img2ascii.js",
   "author": "syzer",
@@ -22,12 +22,15 @@
     "url": "https://github.com/syzer/img2ascii.git"
   },
   "bugs": {
-    "url" : "https://github.com/syzer/img2ascii/issues"
+    "url": "https://github.com/syzer/img2ascii/issues"
   },
   "dependencies": {
     "gm": "^1.21.1",
     "picture-tube": "^1.0.0",
     "request-promise": "^2.0.0",
     "yargs": "^3.32.0"
+  },
+  "devDependencies": {
+    "tap": "^5.7.0"
   }
 }
