--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "img2ascii",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "Convert images (local or url) to ascii art",
   "main": "img2ascii.js",
   "scripts": {
+    "start": "node bin ./doge.png"
     "test": "node test.js"
   },
-  "bin": "./img2ascii.js",
+  "bin": "bin.js",
   "author": "syzer",
   "license": "ISC",
   "keywords": [
@@ -15,7 +16,9 @@
     "convert",
     "terminal",
     "convert ascii",
-    "download image"
+    "download image",
+    "ascii art",
+    "such cli"
   ],
   "repository": {
     "type": "git",
