--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "img2ascii",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Convert images (local or url) to ascii art",
   "main": "img2ascii.js",
   "scripts": {
@@ -30,6 +30,7 @@
   "dependencies": {
     "gm": "^1.21.1",
     "picture-tube": "^1.0.0",
+    "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "yargs": "^6.0.0"
   },
