--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ sudo: false
 language: node_js
 node_js:
   - '6'
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
