--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,8 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+osx_image: xcode8.2
+
+before_install:
+  - brew update
+  - brew outdated graphicsmagick || brew upgrade graphicsmagick
