--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-sudo: false
+sudo: true
+os: osx
 language: node_js
+osx_image: xcode8.2
 node_js:
   - '6'
 env:
@@ -10,8 +12,6 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-osx_image: xcode8.2
-
 before_install:
   - brew update
   - brew outdated graphicsmagick || brew upgrade graphicsmagick
