--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ addons:
       - g++-4.8
 before_install:
   - brew update
-  - brew outdated graphicsmagick || brew upgrade graphicsmagick
+  - brew install graphicsmagick
+#  - brew outdated graphicsmagick || brew upgrade graphicsmagick
